// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GRAM translate > (λx.λy.x+y) 3 4 — curried closure 1`] = `
"[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [3]
[3] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [4]
[4] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] lambda {"variable":"y","icit":"Explicit","level":1}
  :annotation -> [7]
  :body -> [8]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[8] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [9]
[9] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[10] var:foreign {"name":"$add"}
[11] var:ref {"name":"$add"}
  :refers_to -> [10]
  :scope -> [4] {"level":0}
  :scope -> [6] {"level":1}
[12] var:bound {"index":1}
  :refers_to -> [4]
  :scope -> [4] {"level":0}
  :scope -> [6] {"level":1}
[13] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [4] {"level":0}
  :scope -> [6] {"level":1}
[14] lit {"value":{"type":"Num","value":3}}
[15] lit {"value":{"type":"Num","value":4}}"
`;

exports[`GRAM translate > App(Lambda(x, Bound(0)), Num(1)) 1`] = `
"[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [3]
[3] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [5]
  :body -> [6]
[4] var:free {"name":"Int"}
[5] var:ref {"name":"Int"}
  :refers_to -> [4]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [3] {"level":0}
[7] lit {"value":{"type":"Num","value":1}}"
`;

exports[`GRAM translate > Foreign variable 1`] = `
"[1] root
  :entry -> [3]
[2] var:foreign {"name":"$add"}
[3] var:ref {"name":"$add"}
  :refers_to -> [2]"
`;

exports[`GRAM translate > Free variable 1`] = `
"[1] root
  :entry -> [3]
[2] var:free {"name":"x"}
[3] var:ref {"name":"x"}
  :refers_to -> [2]"
`;

exports[`GRAM translate > Lambda(x, Bound(0)) — identity 1`] = `
"[1] root
  :entry -> [2]
[2] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [4]
  :body -> [5]
[3] var:free {"name":"Int"}
[4] var:ref {"name":"Int"}
  :refers_to -> [3]
[5] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}"
`;

exports[`GRAM translate > Lit(42) 1`] = `
"[1] root
  :entry -> [2]
[2] lit {"value":{"type":"Num","value":42}}"
`;

exports[`GRAM translate > Lit(string) 1`] = `
"[1] root
  :entry -> [2]
[2] lit {"value":{"type":"String","value":"hello"}}"
`;

exports[`GRAM translate > Lit(true) 1`] = `
"[1] root
  :entry -> [2]
[2] lit {"value":{"type":"Bool","value":true}}"
`;

exports[`GRAM translate > Modal with gram annotation emits :rewrite_rule edge 1`] = `
"[1] root
  :entry -> [2]
[2] modal {"quantity":"Many"}
  :rewrite_rule -> [5]
  :term -> [3]
[3] lit {"value":{"type":"Num","value":42}}
[4] var:free {"name":"myRule"}
[5] var:ref {"name":"myRule"}
  :refers_to -> [4]"
`;

exports[`GRAM translate > Modal without gram annotation has no :rewrite_rule edge 1`] = `
"[1] root
  :entry -> [2]
[2] modal {"quantity":"Many"}
  :term -> [3]
[3] lit {"value":{"type":"Num","value":42}}"
`;

exports[`GRAM translate > add(1, 2) — curried foreign primop 1`] = `
"[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [3]
[3] app {"icit":"Explicit"}
  :arg -> [6]
  :func -> [5]
[4] var:foreign {"name":"$add"}
[5] var:ref {"name":"$add"}
  :refers_to -> [4]
[6] lit {"value":{"type":"Num","value":1}}
[7] lit {"value":{"type":"Num","value":2}}"
`;

exports[`GRAM translate > block — let x=1; let y=2; x+y 1`] = `
"[1] root
  :entry -> [2]
[2] block
  :return -> [7]
  :stmt -> [3] {"index":0}
  :stmt -> [5] {"index":1}
[3] stmt:let {"variable":"x"}
  :next -> [5]
  :value -> [4]
[4] lit {"value":{"type":"Num","value":1}}
[5] stmt:let {"variable":"y"}
  :value -> [6]
[6] lit {"value":{"type":"Num","value":2}}
[7] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [8]
[8] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[9] var:foreign {"name":"$add"}
[10] var:ref {"name":"$add"}
  :refers_to -> [9]
  :scope -> [3] {"level":0}
  :scope -> [5] {"level":1}
[11] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [3] {"level":0}
  :scope -> [5] {"level":1}
[12] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [3] {"level":0}
  :scope -> [5] {"level":1}"
`;

exports[`GRAM translate > injection — { r | tag = value } 1`] = `
"[1] root
  :entry -> [2]
[2] inj {"label":"tag"}
  :target -> [5]
  :value -> [3]
[3] lit {"value":{"type":"String","value":"hello"}}
[4] var:free {"name":"r"}
[5] var:ref {"name":"r"}
  :refers_to -> [4]"
`;

exports[`GRAM translate > match on variant (Some 42) 1`] = `
"[1] root
  :entry -> [2]
[2] match
  :alt -> [10] {"index":0}
  :alt -> [14] {"index":1}
  :scrutinee -> [3]
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"__tag"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"String","value":"Some"}}
[7] row:ext {"label":"Some"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Num","value":42}}
[9] row:empty
[10] case
  :body -> [13]
  :next -> [14]
  :pattern -> [11]
[11] pat:variant {"label":"Some"}
  :payload -> [12]
[12] pat:binder {"name":"x","level":0}
[13] var:bound {"index":0}
  :refers_to -> [12]
  :scope -> [12] {"level":0}
[14] case
  :body -> [17]
  :pattern -> [15]
[15] pat:variant {"label":"None"}
  :payload -> [16]
[16] pat:wildcard
[17] lit {"value":{"type":"Num","value":0}}"
`;

exports[`GRAM translate > match with alternatives 1`] = `
"[1] root
  :entry -> [2]
[2] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [4]
  :body -> [5]
[3] var:free {"name":"Int"}
[4] var:ref {"name":"Int"}
  :refers_to -> [3]
[5] match
  :alt -> [7] {"index":0}
  :alt -> [10] {"index":1}
  :scrutinee -> [6]
[6] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[7] case
  :body -> [9]
  :next -> [10]
  :pattern -> [8]
[8] pat:lit {"value":{"type":"Num","value":0}}
[9] lit {"value":{"type":"Num","value":1}}
[10] case
  :body -> [12]
  :pattern -> [11]
[11] pat:wildcard
[12] lit {"value":{"type":"Num","value":2}}"
`;

exports[`GRAM translate > nested lambdas — de Bruijn resolution 1`] = `
"[1] root
  :entry -> [2]
[2] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [4]
  :body -> [5]
[3] var:free {"name":"Int"}
[4] var:ref {"name":"Int"}
  :refers_to -> [3]
[5] lambda {"variable":"y","icit":"Explicit","level":1}
  :annotation -> [6]
  :body -> [7]
[6] var:ref {"name":"Int"}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
[7] var:bound {"index":1}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [5] {"level":1}"
`;

exports[`GRAM translate > proj('x', struct({ x: 42 })) 1`] = `
"[1] root
  :entry -> [2]
[2] proj {"label":"x"}
  :target -> [3]
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"x"}
  :rest -> [7]
  :value -> [6]
[6] lit {"value":{"type":"Num","value":42}}
[7] row:empty"
`;

exports[`GRAM translate > projection 1`] = `
"[1] root
  :entry -> [2]
[2] proj {"label":"x"}
  :target -> [4]
[3] var:free {"name":"r"}
[4] var:ref {"name":"r"}
  :refers_to -> [3]"
`;

exports[`GRAM translate > reset(shift k -> (k 1) + (k 2)) — multishot 1`] = `
"[1] root
  :entry -> [2]
[2] reset
  :body -> [3]
[3] shift
  :body -> [4]
[4] lambda {"variable":"k","icit":"Explicit","level":0}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [7]
[7] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [9]
[8] var:foreign {"name":"$add"}
[9] var:ref {"name":"$add"}
  :refers_to -> [8]
  :scope -> [4] {"level":0}
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [4] {"level":0}
[12] lit {"value":{"type":"Num","value":1}}
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [4] {"level":0}
[15] lit {"value":{"type":"Num","value":2}}"
`;

exports[`GRAM translate > reset(shift k -> k 42) — single resume 1`] = `
"[1] root
  :entry -> [2]
[2] reset
  :body -> [3]
[3] shift
  :body -> [4]
[4] lambda {"variable":"k","icit":"Explicit","level":0}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [7]
[7] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [4] {"level":0}
[8] lit {"value":{"type":"Num","value":42}}"
`;

exports[`GRAM translate > struct — row extension chain 1`] = `
"[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [4]
  :func -> [3]
[3] lit {"value":{"type":"Atom","value":"Struct"}}
[4] row:ext {"label":"x"}
  :rest -> [6]
  :value -> [5]
[5] lit {"value":{"type":"Num","value":1}}
[6] row:ext {"label":"y"}
  :rest -> [8]
  :value -> [7]
[7] lit {"value":{"type":"Num","value":2}}
[8] row:empty"
`;

exports[`GRAM translate > triple nested lambda — de Bruijn indices at all depths 1`] = `
"[1] root
  :entry -> [2]
[2] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [3]
  :body -> [4]
[3] lit {"value":{"type":"Atom","value":"Num"}}
[4] lambda {"variable":"y","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] lambda {"variable":"z","icit":"Explicit","level":2}
  :annotation -> [7]
  :body -> [8]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[8] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [9]
[9] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[10] var:foreign {"name":"$add"}
[11] var:ref {"name":"$add"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[12] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [13]
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] var:ref {"name":"$add"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[15] var:bound {"index":2}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[16] var:bound {"index":1}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[17] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}"
`;
